fixed debit/credit amount alignment

--- a/src/app/ui/journal/journal.component.scss
+++ b/src/app/ui/journal/journal.component.scss
@@ -36,3 +36,7 @@ h1 {
 .hide {
   display: none;
 }
+
+#number {
+  text-align: right;
+}
